improve volume stepper, fix dining room

--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -1,5 +1,6 @@
 use_frameworks!
 
 target 'serverfarm' do
+    pod 'KWStepper'
     pod 'Socket.IO-Client-Swift', '~> 8.2.0' # Or latest version
 end
